# radegen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
data/meshes/: default.rbmesh  green.map  purp.rbmesh  simple.rbmesh  simple_out_new.rbmesh  test.rbmesh
data/shaders/: diffuse_spec_frag.shader  diffuse_spec_vert.shader  font_frag.shader  font_vert.shader  fs.glsl  fs_line.glsl  sprite_frag.shader  sprite_vert.shader  spriteheat_frag.shader  spriteheat_vert.shader  vs.glsl  vs_line.glsl
data/textures/quakehd/: tlight02.tga  tlight02_glow.tga  tlight11.tga  tlight11_glow.tga
src/: appmain.cpp  appmain.h  irenderobj.h  lightmapgen.cpp  lightmapgen.h  lightmapimage.h  lumeldata.h  ui_display.cpp  ui_display.h
src/common/: camera.cpp  camera.h  frustrum.cpp  frustrum.h  image.cpp  image.h  inputs.cpp  inputs.h  keycodes.h  light3d.h  meshfile.cpp  meshfile.h  miniz.cpp  osutils.cpp  osutils.h  plane3d.cpp  plane3d.h  plf_timer.h  point2d.h  point3d.cpp  point3d.h  polygon3d.cpp  polygon3d.h  polymesh.cpp  polymesh.h  rmath.cpp  rmath.h  stb_image.h  textmesh.cpp  textmesh.h  timer.cpp  timer.h  tinyxml2.cpp  tinyxml2.h  transform.h
src/display_gl/: display_gl.cpp  display_gl.h  material.h  materialmanager.cpp  materialmanager.h  mesh_gl.cpp  mesh_gl.h  renderdebugmesh_gl.cpp  renderdebugmesh_gl.h  rendermesh_gl.cpp  rendermesh_gl.h  rendertext_gl.cpp  rendertext_gl.h  rendertypes.h  shader_gl.cpp  shader_gl.h
src/ext/glad/: glad.h
src/ext/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  (+3 more)
src/glfw_main/: buildsettings.cmake  glad.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.h  main.cpp
(+1 files in other folders)
